# csv

./: pyproject.toml
csv_reader/: settings.py  urls.py
