[tool.poetry]
name = "csv-reader"
version = "0.1.0"
description = ""
authors = ["Kirill-Korzunov <kirillkorzunov@gmail.com>"]
readme = "README.md"
packages = [{include = "csv_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
